deleted overflow and fixed bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ button {
     justify-content: center;
     align-items: center;
     text-align: center;
-    overflow: hidden;
+
 }
 
 p {
